[package]
name = "solana-fluidity"
version = "0.1.0"
authors = ["Ying Stokes <ying@spi.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
exclude_entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
serde = "1.0.126"
serde_derive = "1.0.103"
solana-program = "=1.6.6"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "fluidity"
crate-type = ["cdylib", "lib"]