[package]
name = "solana-fluidity"
version = "0.1.0"
authors = ["Ying Stokes <ying@spi.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
exclude_entrypoint = []

[dependencies]
borsh = "0.9.1"
solana-program = "=1.7.11"

[dev-dependencies]
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"

[lib]
name = "fluidity"
crate-type = ["cdylib", "lib"]
