[package]
name = "fluidity-solana-test-client"
version = "0.1.0"
authors = ["Ying Stokes <ying@spi.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
serde = "1.0.126"
solana-sdk = "=1.7.4"
solana-client = "=1.7.4"
solana-transaction-status = "=1.7.4"
websocket = "0.26.2"
